Ajustes en textos en Acciones climaticas

--- a/acciones-climaticas.html
+++ b/acciones-climaticas.html
@@ -80,11 +80,11 @@
           <div class="stats-container">
             <div class="stat-item">
               <span class="stat-number" id="statTotal">0</span>
-              <span class="stat-label">Acciones</span>
+              <span class="stat-label">Proyectos</span>
             </div>
             <div class="stat-item">
               <span class="stat-number" id="statUbicaciones">0</span>
-              <span class="stat-label">Ubicaciones</span>
+              <span class="stat-label">Acciones</span>
             </div>
             <div class="stat-item">
               <span class="stat-number" id="statDependencias">0</span>
