--- a/clima.html
+++ b/clima.html
@@ -64,8 +64,11 @@
           <div class="clima-content">
             <!-- Card 1: Texto explicativo (20% ancho, 100% alto) -->
             <div class="clima-text-card">
-              <h3 class="card-title">Escenarios Climaticos</h3>
+              <h3 class="card-title">Clima y Escenarios de Cambio Climático</h3>
               <div class="card-content">
+                <p>
+                  El clima es mucho más que el estado del tiempo. Es la combinación de temperatura, lluvias, humedad y viento que define cómo vivimos en cada región. Aquí encontrarás información sobre cómo se comporta el clima en Tlaxcala.
+                </p>
                 <p>
                   Los escenarios climaticos son proyecciones basadas en modelos que simulan
                   como podria cambiar el clima en el futuro, considerando diferentes niveles
@@ -92,19 +95,19 @@
                   </div>
                 </div>
 
-                <p style="margin-top: 1rem; font-size: 0.85rem; color: #666;">
+                <p style="margin-top: 1rem; font-size: 14px; color: #666;">
                   Explora los mapas para ver como varian las condiciones climaticas
                   entre estaciones y percentiles.
                 </p>
               </div>
             </div>
 
-            <!-- Card 2: Mapa Primavera (40% ancho, 50% alto - superior izquierda) -->
-            <div class="clima-map-card map-primavera">
+            <!-- Card 2: Mapa Otoño (40% ancho, 50% alto - superior izquierda) -->
+            <div class="clima-map-card map-otono">
               <div class="map-card-header">
                 <div>
-                  <h4 class="map-card-title">Primavera</h4>
-                  <span class="map-card-subtitle">Marzo - Mayo</span>
+                  <h4 class="map-card-title">Otoño</h4>
+                  <span class="map-card-subtitle">Septiembre - Noviembre</span>
                 </div>
               </div>
               <div class="map-container" id="map-1-primavera"></div>
