Ajustes en mapas de clima

--- a/clima.html
+++ b/clima.html
@@ -80,7 +80,7 @@
                 </p>
 
                 <div class="clima-concepts">
-                  <h4 class="concept-title">Percentiles climaticos</h4>
+                  <h4 class="concept-title">Percentiles climáticos</h4>
                   <div class="concept-item">
                     <span class="concept-label">Q05</span>
                     <span class="concept-desc">Percentil 5 - Representa condiciones mas frias o secas (5% de los valores estan por debajo)</span>
@@ -95,7 +95,7 @@
                   </div>
                 </div>
 
-                <p style="margin-top: 1rem; font-size: 14px; color: #666;">
+                <p>
                   Explora los mapas para ver como varian las condiciones climaticas
                   entre estaciones y percentiles.
                 </p>
