Creacion de mapa de mitigacion

--- a/acciones-climaticas.html
+++ b/acciones-climaticas.html
@@ -62,6 +62,7 @@
           <a href="acciones-climaticas.html" class="navbar-link active"
             >Acciones Climáticas</a
           >
+          <a href="mitigacion.html" class="navbar-link">Mitigación</a>
         </div>
       </div>
     </nav>
