--- a/clima.html
+++ b/clima.html
@@ -46,6 +46,7 @@
           <a href="impactos.html" class="navbar-link">Impactos</a>
           <a href="clima.html" class="navbar-link active">Clima</a>
           <a href="acciones-climaticas.html" class="navbar-link">Acciones Climaticas</a>
+          <a href="mitigacion.html" class="navbar-link">Mitigacion</a>
         </div>
       </div>
     </nav>
