--- a/riesgo.html
+++ b/riesgo.html
@@ -46,6 +46,7 @@
           <a href="impactos.html" class="navbar-link">Impactos</a>
           <a href="clima.html" class="navbar-link">Clima</a>
           <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
+          <a href="mitigacion.html" class="navbar-link">Mitigación</a>
         </div>
       </div>
     </nav>
