Se agregan botones para activar los mapas segun modelo y periodo

--- a/clima.html
+++ b/clima.html
@@ -100,6 +100,24 @@
                   Explora los mapas para ver como varian las condiciones climaticas
                   entre estaciones y percentiles.
                 </p>
+
+                <!-- Selectores de Modelo y Periodo -->
+                <div class="clima-selectors">
+                  <div class="selector-group">
+                    <span class="selector-label">Modelos</span>
+                    <div class="selector-buttons">
+                      <button class="selector-btn active" data-model="SSP245">SSP245</button>
+                      <button class="selector-btn" data-model="SSP585">SSP585</button>
+                    </div>
+                  </div>
+                  <div class="selector-group">
+                    <span class="selector-label">Periodo</span>
+                    <div class="selector-buttons">
+                      <button class="selector-btn active" data-period="2021-2040">2021-2040</button>
+                      <button class="selector-btn" data-period="2041-2060">2041-2060</button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
