--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
           </p>
           <a href="acciones-climaticas.html" class="story-map-button">Explorar</a>
         </div>
+
+        <!-- Card Mitigación -->
+        <div class="story-map-card card-mitigacion" onclick="location.href='mitigacion.html'">
+          <!-- <div class="story-map-icon">🌿</div> -->
+          <h2 class="story-map-title">Mitigación</h2>
+          <p class="story-map-description">
+            Conoce las estrategias de mitigación del cambio climático en Tlaxcala
+          </p>
+          <a href="mitigacion.html" class="story-map-button">Explorar</a>
+        </div>
       </div>
     </div>
   </section>
