Se agrega la funcionalidad de lista desplegable

--- a/escenarios_clima.html
+++ b/escenarios_clima.html
@@ -44,7 +44,7 @@
           <a href="riesgo.html" class="navbar-link">Riesgo</a>
           <a href="amenazas.html" class="navbar-link">Amenazas</a>
           <a href="impactos.html" class="navbar-link">Impactos</a>
-          <a href="clima.html" class="navbar-link active">Clima</a>
+          <a href="escenarios_clima.html" class="navbar-link active">Escenarios Climáticos</a>
           <a href="acciones-climaticas.html" class="navbar-link">Acciones Climaticas</a>
           <a href="mitigacion.html" class="navbar-link">Mitigacion</a>
         </div>
@@ -132,7 +132,7 @@
               <div class="map-container" id="map-1-primavera">
                 <!-- Selector de Variable Climática -->
                 <div class="clima-variable-selector">
-                  <label for="variable-climatica">Variable:</label>
+                  <label for="variable-climatica">Selecciona:</label>
                   <select id="variable-climatica" class="clima-variable-select">
                     <option value="precipitacion" selected>Precipitación</option>
                     <option value="temp_max">Temperatura máxima</option>
