--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="riesgo.html" class="navbar-link">Riesgo</a>
         <a href="amenazas.html" class="navbar-link">Amenazas</a>
         <a href="impactos.html" class="navbar-link">Impactos</a>
-        <a href="clima.html" class="navbar-link">Clima</a>
+        <a href="escenarios_clima.html" class="navbar-link">Escenarios Climáticos</a>
         <a href="acciones-climaticas.html" class="navbar-link">Acciones Climáticas</a>
         <a href="mitigacion.html" class="navbar-link">Mitigación</a>
       </div>
@@ -92,13 +92,13 @@
         </div>
 
         <!-- Card Clima -->
-        <div class="story-map-card card-clima" onclick="location.href='clima.html'">
+        <div class="story-map-card card-clima" onclick="location.href='escenarios_clima.html'">
           <!-- <div class="story-map-icon">🌤️</div> -->
-          <h2 class="story-map-title">Clima</h2>
+          <h2 class="story-map-title">Escenarios Climáticos</h2>
           <p class="story-map-description">
             Explora los escenarios climáticos y proyecciones para Tlaxcala
           </p>
-          <a href="clima.html" class="story-map-button">Explorar</a>
+          <a href="escenarios_clima.html" class="story-map-button">Explorar</a>
         </div>
 
         <!-- Card Acciones Climáticas -->
